HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumTupleArity/Source/Main.uv
//! Rejected enum specimen for tuple variant payload arity mismatch.

public enum TupleArityPayload {
    Pair(i32, bool)
}

public procedure enumTupleArityReference() -> TupleArityPayload {
    return TupleArityPayload::Pair(1)
}
